# Oz_codingSchool

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  gitignore.txt  pyproject.toml  requirements.txt
AH_web_development_assignment/: .env.example  README.md  docker-compose.yml  pyproject.toml
AH_web_development_assignment/alembic/: env.py
AH_web_development_assignment/app/: main.py
AH_web_development_assignment/static/: app.js  pages.js  styles.css
AH_web_development_assignment/tests/: conftest.py  test_user_apis.py
alembic/: README.md
alembic/versions/: b2f1a7c4d9e0_add_soft_delete_columns_to_patients.py  fded53d3c0af_create_ai_health_tables.py
app/: .dockerignore  Dockerfile  Dockerfile.dockerignore  __init__.py  main.py  seed.py
app/apis/: __init__.py  admin_users.py  ai_predictions.py  medical_records.py  patients.py  practice_apis.py  users.py
app/core/: config.py  dependencies.py  storage.py
app/models/: __init__.py  ai_analysis_result.py  enums.py  medical_record.py  patient.py  user.py  xray_image.py
app/repositories/: __init__.py  (+4 more)
docs/: 1일차_team_rules.md  2일차_git_branch_전략.md  2일차git_branch전략.md  3일차_db_migration.md  3일차_프로젝트_뜯어보기.md  3일차_프로젝트_뜯어보기2.md  3일차_프로젝트_뜯어보기3.md  3일차_프로젝트_뜯어보기4.md  3일차_프로젝트_뜯어보기5.md  3일차프로젝트뜯어보기1.md  4일차_USER_API_설계.md  4일차_과제_완료_보고서_노션.md  5일차_환자관리_API_설계.md  6일차_폐렴예측_API_설계.md  7일차_앱_실행화면.md  8일차_docker_compose.md  9일차_동시성문제_해결을위한_아키텍처설계.md  README.md  docker_환경설정_가이드.md
static/: apis.js  index.html  pages.js  utils.js
tests/: __init__.py  conftest.py  test_ai_prediction_apis.py  test_patient_apis.py  test_patient_create_list.py  test_practice_apis.py  test_user_apis.py  test_worker_model.py
worker/: README.md  __init__.py  model.py  requirements.txt
(+42 files in other folders)
