[project]
name = "ai-health-web-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncmy>=0.2.11",
    "cryptography>=46.0.6",
    "fastapi[standard]>=0.135.3",
    "pillow>=12.0.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.10.1",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "uuid6>=2025.0.1",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
